// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader Snapshot - renders correctly with multiple actions 1`] = `
<View
  className="flex-row items-center justify-between px-5 py-3"
>
  <Text
    className="text-3xl font-semibold text-f1-foreground"
  >
    Test Page Title
  </Text>
  <View
    className="flex-row gap-2"
  >
    <View
      accessibilityLabel="Notifications"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text>
        Notifications
      </Text>
      <Text>
        Icon:
        Bell
      </Text>
      <Text>
        Badge
      </Text>
    </View>
    <View
      accessibilityLabel="Alerts"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text>
        Alerts
      </Text>
      <Text>
        Icon:
        Bell
      </Text>
    </View>
  </View>
</View>
`;

exports[`PageHeader Snapshot - renders correctly with one action 1`] = `
<View
  className="flex-row items-center justify-between px-5 py-3"
>
  <Text
    className="text-3xl font-semibold text-f1-foreground"
  >
    Test Page Title
  </Text>
  <View
    className="flex-row gap-2"
  >
    <View
      accessibilityLabel="Notifications"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text>
        Notifications
      </Text>
      <Text>
        Icon:
        Bell
      </Text>
    </View>
  </View>
</View>
`;

exports[`PageHeader Snapshot - renders correctly with one action with a badge 1`] = `
<View
  className="flex-row items-center justify-between px-5 py-3"
>
  <Text
    className="text-3xl font-semibold text-f1-foreground"
  >
    Test Page Title
  </Text>
  <View
    className="flex-row gap-2"
  >
    <View
      accessibilityLabel="Notifications"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text>
        Notifications
      </Text>
      <Text>
        Icon:
        Bell
      </Text>
      <Text>
        Badge
      </Text>
    </View>
  </View>
</View>
`;

exports[`PageHeader Snapshot - renders correctly with only a title 1`] = `
<View
  className="flex-row items-center justify-between px-5 py-3"
>
  <Text
    className="text-3xl font-semibold text-f1-foreground"
  >
    Test Page Title
  </Text>
  <View
    className="flex-row gap-2"
  />
</View>
`;
